# zbar-windows

./: .gitignore  .gitmodules  CMakeLists.txt  README-windows.md  README.md
.github/workflows/: ci.yml  cmake.yml
cmake/: zbarConfig.cmake.in
config-internal/: config-unix.h  config-win.h  config.h
examples/: processor.c  processor.cpp  scan_image.c  scan_image.cpp
gtk/: zbargtk.c  zbargtkprivate.h
include/: zbar.h
include/zbar/: Decoder.h  Exception.h  Image.h  ImageScanner.h  Processor.h  QZBar.h  QZBarImage.h  Scanner.h  Symbol.h  Video.h  Window.h  zbargtk.h
iphone/examples/ReaderSample/ReaderSample/: ReaderSampleViewController.h
iphone/examples/TabReader/TabReader/: TabReaderAppDelegate.h
iphone/include/ZBarSDK/: ZBarCameraSimulator.h  ZBarHelpController.h  ZBarImageScanner.h  ZBarReaderController.h  ZBarReaderView.h  ZBarReaderViewController.h
java/: zbarjni.c
libpng/: readme.md
perl/: ppport.h
po/: pt_BR.po
pygtk/: zbarpygtkmodule.c
python/: decoder.c  enum.c  exception.c  image.c  imagescanner.c  processor.c  scanner.c  symbol.c  symboliter.c  symbolset.c  zbarmodule.c  zbarmodule.h
qt/: QZBar.cpp  QZBarThread.cpp  QZBarThread.h
test/: dbg_scan.cpp  pdf417_encode.h  test_convert.c  test_cpp.cpp  test_cpp_img.cpp  test_dbus.c  test_decode.c  test_images.c  test_jpeg.c  test_proc.c  test_video.c  test_window.c
win32/: config.h  qedit.h  readme.md  stdbool.h  unistd.h  zbar.def  zbar.vcxproj  zbar.vcxproj.filters  zbar_qrcode.sln
win32/scan_image/: scan_image.vcxproj  scan_image.vcxproj.filters
win32/zbarcam/: zbarcam.vcxproj  zbarcam.vcxproj.filters
win32/zbarimg/: zbarimg.vcxproj  zbarimg.vcxproj.filters
zbar/: config.c  convert.c  decoder.c  decoder.h  error.c  error.h  event.h  image.c  image.h  img_scanner.c  img_scanner.h  jpeg.c  misc.c  mutex.h  processor.c  processor.h  qrcode.h  refcnt.h  scanner.c  sqcode.c  sqcode.h  svg.c  svg.h  symbol.c  symbol.h  thread.h  timer.h  video.c  video.h  window.c  window.h
zbar/decoder/: codabar.c  codabar.h  code128.c  code128.h  code39.c  code39.h  code93.c  code93.h  databar.c  databar.h  ean.c  ean.h  i25.c  i25.h  pdf417.c  pdf417.h  pdf417_hash.h  qr_finder.c
zbar/processor/: lock.c  null.c  posix.c  posix.h  win.c  x.c
zbar/qrcode/: bch15_5.c  binarize.c  binarize.h  isaac.c  isaac.h  qrdec.c  qrdec.h  qrdectxt.c  rs.c  rs.h  util.c  util.h
zbar/video/: dshow.c  null.c  v4l.c  v4l1.c  v4l2.c  vfw.c
zbar/window/: dib.c  null.c  vfw.c  win.c  win.h  x.c  x.h  ximage.c  xv.c
zbarcam/: scan_video.c  zbarcam-gtk.c  zbarcam-qt.cpp  zbarcam.c
zbarimg/: zbarimg.c
